--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "sequelize-typescript": "^2.1.6"
   },
   "devDependencies": {
+    "@faker-js/faker": "^8.4.1",
     "@types/bcryptjs": "^2.4.6",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20",
