--- a/.env
+++ b/.env
@@ -1,11 +1,1 @@
-NODE_ENV=development
-PORT=3000
-
-DB_USERNAME=admin
-DB_PASSWORD=admin
-DB_NAME=database
-DB_HOST=127.0.0.1
-DB_PORT=5432
-
-SECRET_TOKEN=secrettoken
-SECRET_REFRESH_TOKEN=secretrefreshtoken
+API_URL=http://localhost:3333
