--- a/package.json
+++ b/package.json
@@ -9,14 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.9.0",
+    "axios": "^1.7.2",
     "bcryptjs": "^2.4.3",
     "dayjs": "^1.11.11",
     "jsonwebtoken": "^9.0.2",
+    "lucide-react": "^0.407.0",
     "next": "14.2.5",
+    "nookies": "^2.5.2",
     "pg": "^8.12.0",
     "pg-hstore": "^2.3.4",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.52.1",
     "reflect-metadata": "^0.2.2",
     "sequelize": "^6.37.3",
     "sequelize-typescript": "^2.1.6",
