--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.7.2",
     "bcryptjs": "^2.4.3",
     "dayjs": "^1.11.11",
+    "dotenv": "^16.4.5",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.407.0",
     "next": "14.2.5",
